// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Components render correctly in theme: dark 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ ⚠Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Components render correctly in theme: light 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ ⚠Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Components render correctly in theme: dark-daltonized 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ ⚠Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Components render correctly in theme: light-daltonized 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ ⚠Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Components render correctly in theme: dark-ansi 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ !Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Components render correctly in theme: light-ansi 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ !Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Full REPL screen renders correctly in theme: dark 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                   │
│                                                                                                   │
│  ____   ____      _      ___ _   _                                                                │
│ | __ ) |  _ \\    / \\    |_ _| \\ | |                                                               │
│ |  _ \\ | |_) |  / _ \\    | ||  \\| |                                              Standalone Relational Memory Engine│
│ | |_) | |  _ < / ___ \\   | || |\\  |                                                               │
│ |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|                                                               │
│    Memory Companion CLI · v0.1.0                                                                  │
│                                                                                                   │
│                                                                                                   │
│ ─────────────────────────────────────────────────── TUI Console  ───────────────────────────────────────────────────│
│ ┌───────────────────────────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │ [1] Conversation View (Focused)                                   │ │ [2] Sessions              ││
│ │                                                                   │ │           No sessions available.││
│ │                                                                   │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [3] Execution Timeline    ││
│ │                                                                   │ │       Waiting for execution start...││
│ │            No messages. Type a prompt below to begin.             │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [4] Active Tools          ││
│ │                                                                   │ │                           ││
│ │                                                                   │ │          No active tools invoked.││
│ │                                                                   │ │                           ││
│ │                                                                   │ │                           ││
│ └───────────────────────────────────────────────────────────────────┘ └────────────────────────────────────────────┘│
│                                                                                                   │
│ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                             │
│                                                                                                   │
│  [Auto]  Claude 3.5 Sonnet                    In: 0 · Out: 0  $0.0000                   Rate: █░░░░'exit' to quit│
│                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Full REPL screen renders correctly in theme: light 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                   │
│                                                                                                   │
│  ____   ____      _      ___ _   _                                                                │
│ | __ ) |  _ \\    / \\    |_ _| \\ | |                                                               │
│ |  _ \\ | |_) |  / _ \\    | ||  \\| |                                              Standalone Relational Memory Engine│
│ | |_) | |  _ < / ___ \\   | || |\\  |                                                               │
│ |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|                                                               │
│    Memory Companion CLI · v0.1.0                                                                  │
│                                                                                                   │
│                                                                                                   │
│ ─────────────────────────────────────────────────── TUI Console  ───────────────────────────────────────────────────│
│ ┌───────────────────────────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │ [1] Conversation View (Focused)                                   │ │ [2] Sessions              ││
│ │                                                                   │ │           No sessions available.││
│ │                                                                   │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [3] Execution Timeline    ││
│ │                                                                   │ │       Waiting for execution start...││
│ │            No messages. Type a prompt below to begin.             │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [4] Active Tools          ││
│ │                                                                   │ │                           ││
│ │                                                                   │ │          No active tools invoked.││
│ │                                                                   │ │                           ││
│ │                                                                   │ │                           ││
│ └───────────────────────────────────────────────────────────────────┘ └────────────────────────────────────────────┘│
│                                                                                                   │
│ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                             │
│                                                                                                   │
│  [Auto]  Claude 3.5 Sonnet                    In: 0 · Out: 0  $0.0000                   Rate: █░░░░'exit' to quit│
│                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Full REPL screen renders correctly in theme: dark-daltonized 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                   │
│                                                                                                   │
│  ____   ____      _      ___ _   _                                                                │
│ | __ ) |  _ \\    / \\    |_ _| \\ | |                                                               │
│ |  _ \\ | |_) |  / _ \\    | ||  \\| |                                              Standalone Relational Memory Engine│
│ | |_) | |  _ < / ___ \\   | || |\\  |                                                               │
│ |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|                                                               │
│    Memory Companion CLI · v0.1.0                                                                  │
│                                                                                                   │
│                                                                                                   │
│ ─────────────────────────────────────────────────── TUI Console  ───────────────────────────────────────────────────│
│ ┌───────────────────────────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │ [1] Conversation View (Focused)                                   │ │ [2] Sessions              ││
│ │                                                                   │ │           No sessions available.││
│ │                                                                   │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [3] Execution Timeline    ││
│ │                                                                   │ │       Waiting for execution start...││
│ │            No messages. Type a prompt below to begin.             │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [4] Active Tools          ││
│ │                                                                   │ │                           ││
│ │                                                                   │ │          No active tools invoked.││
│ │                                                                   │ │                           ││
│ │                                                                   │ │                           ││
│ └───────────────────────────────────────────────────────────────────┘ └────────────────────────────────────────────┘│
│                                                                                                   │
│ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                             │
│                                                                                                   │
│  [Auto]  Claude 3.5 Sonnet                    In: 0 · Out: 0  $0.0000                   Rate: █░░░░'exit' to quit│
│                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Full REPL screen renders correctly in theme: light-daltonized 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                   │
│                                                                                                   │
│  ____   ____      _      ___ _   _                                                                │
│ | __ ) |  _ \\    / \\    |_ _| \\ | |                                                               │
│ |  _ \\ | |_) |  / _ \\    | ||  \\| |                                              Standalone Relational Memory Engine│
│ | |_) | |  _ < / ___ \\   | || |\\  |                                                               │
│ |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|                                                               │
│    Memory Companion CLI · v0.1.0                                                                  │
│                                                                                                   │
│                                                                                                   │
│ ─────────────────────────────────────────────────── TUI Console  ───────────────────────────────────────────────────│
│ ┌───────────────────────────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │ [1] Conversation View (Focused)                                   │ │ [2] Sessions              ││
│ │                                                                   │ │           No sessions available.││
│ │                                                                   │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [3] Execution Timeline    ││
│ │                                                                   │ │       Waiting for execution start...││
│ │            No messages. Type a prompt below to begin.             │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [4] Active Tools          ││
│ │                                                                   │ │                           ││
│ │                                                                   │ │          No active tools invoked.││
│ │                                                                   │ │                           ││
│ │                                                                   │ │                           ││
│ └───────────────────────────────────────────────────────────────────┘ └────────────────────────────────────────────┘│
│                                                                                                   │
│ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                             │
│                                                                                                   │
│  [Auto]  Claude 3.5 Sonnet                    In: 0 · Out: 0  $0.0000                   Rate: █░░░░'exit' to quit│
│                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Full REPL screen renders correctly in theme: dark-ansi 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                   │
│                                                                                                   │
│  ____   ____      _      ___ _   _                                                                │
│ | __ ) |  _ \\    / \\    |_ _| \\ | |                                                               │
│ |  _ \\ | |_) |  / _ \\    | ||  \\| |                                              Standalone Relational Memory Engine│
│ | |_) | |  _ < / ___ \\   | || |\\  |                                                               │
│ |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|                                                               │
│    Memory Companion CLI · v0.1.0                                                                  │
│                                                                                                   │
│                                                                                                   │
│ ─────────────────────────────────────────────────── TUI Console  ───────────────────────────────────────────────────│
│ ┌───────────────────────────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │ [1] Conversation View (Focused)                                   │ │ [2] Sessions              ││
│ │                                                                   │ │           No sessions available.││
│ │                                                                   │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [3] Execution Timeline    ││
│ │                                                                   │ │       Waiting for execution start...││
│ │            No messages. Type a prompt below to begin.             │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [4] Active Tools          ││
│ │                                                                   │ │                           ││
│ │                                                                   │ │          No active tools invoked.││
│ │                                                                   │ │                           ││
│ │                                                                   │ │                           ││
│ └───────────────────────────────────────────────────────────────────┘ └────────────────────────────────────────────┘│
│                                                                                                   │
│ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                             │
│                                                                                                   │
│  [Auto]  Claude 3.5 Sonnet                    In: 0 · Out: 0  $0.0000                   Rate: █░░░░'exit' to quit│
│                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Full REPL screen renders correctly in theme: light-ansi 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                   │
│                                                                                                   │
│  ____   ____      _      ___ _   _                                                                │
│ | __ ) |  _ \\    / \\    |_ _| \\ | |                                                               │
│ |  _ \\ | |_) |  / _ \\    | ||  \\| |                                              Standalone Relational Memory Engine│
│ | |_) | |  _ < / ___ \\   | || |\\  |                                                               │
│ |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|                                                               │
│    Memory Companion CLI · v0.1.0                                                                  │
│                                                                                                   │
│                                                                                                   │
│ ─────────────────────────────────────────────────── TUI Console  ───────────────────────────────────────────────────│
│ ┌───────────────────────────────────────────────────────────────────┐ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │ [1] Conversation View (Focused)                                   │ │ [2] Sessions              ││
│ │                                                                   │ │           No sessions available.││
│ │                                                                   │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [3] Execution Timeline    ││
│ │                                                                   │ │       Waiting for execution start...││
│ │            No messages. Type a prompt below to begin.             │ │                           ││
│ │                                                                   │ └────────────────────────────────────────────┘│
│ │                                                                   │                             │
│ │                                                                   │ ┌────────────────────────────────────────────┐│
│ │                                                                   │ │                           ││
│ │                                                                   │ │ [4] Active Tools          ││
│ │                                                                   │ │                           ││
│ │                                                                   │ │          No active tools invoked.││
│ │                                                                   │ │                           ││
│ │                                                                   │ │                           ││
│ └───────────────────────────────────────────────────────────────────┘ └────────────────────────────────────────────┘│
│                                                                                                   │
│ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                             │
│                                                                                                   │
│  [Auto]  Claude 3.5 Sonnet                    In: 0 · Out: 0  $0.0000                   Rate: █░░░░'exit' to quit│
│                                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
